hard-gists/1551619/run.log
=== Docker Run Log for 1551619 ===
Started at: Mi 29. Okt 12:18:29 CET 2025

[2025-10-29 12:18:29] START: Running container for 1551619
[2025-10-29 12:18:30] SUCCESS: Container 6f0f376586f6979d67a38ef3a5e1e414c597c129beb3c095240bf214be1c106a started for 1551619
=== Container logs for 1551619 ===
  File "/snippet.py", line 102
    print "saved {0}".format(out_pto)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1551619 ===
[2025-10-29 12:18:32] INFO: Container 6f0f376586f6979d67a38ef3a5e1e414c597c129beb3c095240bf214be1c106a has stopped
